# Customer-Segmentation-Personalized-Recommendation-Engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Customer-Segmentation-Personalized-Recommendation-Engine.sln  Dockerfile  ENTERPRISE_RETAIL_ANALYTICS_PORTFOLIO.md  Makefile  README.md  README_ENTERPRISE.md  SOLUTION_SUMMARY.md  create_enterprise_visualizations.py  docker-compose.enterprise.yml  generate_performance_metrics.py  high_precision_analytics.py  pyproject.toml  requirements.txt  run_enterprise_platform.py  setup.py
.github/workflows/: enterprise-cicd.yml
config/: Dockerfile  docker-compose.yml  enterprise_config.json
data/: customers.csv  customers_real.csv  digital_events_real.csv  generate_datasets.py  load_real_instacart_data.py  products.csv  products_real.csv
data/processed/: digital_events.csv
docs/: API.md  CONTRIBUTING.md  ENHANCED_BUSINESS_INTELLIGENCE.md  README.md
models/: churn_metadata_20250919_152231.json  churn_metadata_20250919_155112.json  churn_metadata_20250919_155202.json  churn_metadata_20250919_155346.json  churn_metadata_20250919_155412.json  churn_metadata_20251104_022131.json  churn_metadata_20251104_022152.json  churn_metadata_20251104_022243.json  churn_metadata_20251104_023603.json  churn_metadata_20251104_024142.json  churn_model_20251104_022131.joblib  churn_model_20251104_022152.joblib  churn_scaler_20251104_022152.joblib
reports/: churn_predictions_enhanced.csv  customer_clv_20250919_155059.csv  customer_segments_enhanced.csv  detailed_performance_report_20250919_155414.txt  detailed_performance_report_20251104_022154.txt  enhanced_segments_20250919_155149.csv  executive_performance_summary_20250919_155414.json  executive_performance_summary_20251104_022154.json  segmentation_summary_20250919_153804.json  segmentation_summary_20250919_155059.json  segmentation_summary_20250919_155149.json  vip_customers_20250919_155059.csv
reports/ab_tests/: recommendation_algorithm_test_results.json
reports/insights/: detailed_analysis_20250919_153939.json  detailed_analysis_20250919_155413.json  detailed_analysis_20251104_022153.json  executive_summary_20250919_153939.json  executive_summary_20250919_155413.json  executive_summary_20251104_022153.json
reports/performance/: performance_report_20251104_022243.json  performance_report_20251104_023536.json  performance_report_20251104_023604.json  performance_report_20251104_024115.json  performance_report_20251104_024142.json
reports/performance_metrics/: comprehensive_performance_report_20250919_154945.json  comprehensive_performance_report_20250919_155414.json  comprehensive_performance_report_20251104_022154.json  performance_summary_20250919_154945.txt  performance_summary_20250919_155414.txt  performance_summary_20251104_022154.txt
reports/real_time/: dashboard_data_20250919_154151.json  real_time_alerts_20250919_154151.csv  real_time_kpis_20250919_154151.csv  real_time_transactions_20250919_154151.csv
requirements/: requirements-dev.txt  requirements-enterprise.txt  requirements.txt
results/: enterprise_precision_results.json  executive_summary.md
scripts/: cleanup_redundant_files.py  docker-run.sh
src/: __init__.py  customer_segmentation.py  main.py  recommendation_engine.py  run_real_analysis.py
src/data/: __init__.py  data_loader.py
src/enterprise/: __init__.py  api_gateway.py  crm_integration_layer.py  enterprise_platform_manager.py  performance_monitor.py  security_manager.py
src/enterprise/dotnet_api/: CustomerSegmentation.API.csproj  Program.cs
src/enterprise/dotnet_api/Models/: ApiModels.cs
src/features/: __init__.py
src/models/: __init__.py  ab_testing_framework.py  business_insights_engine.py  churn_prediction.py  customer_segmentation.py  fraud_detection.py  inventory_optimization.py  marketing_attribution.py  model_training_manager.py  performance_metrics_generator.py  pricing_optimization.py  real_time_analytics.py  recommendation_engine.py
src/utils/: __init__.py  config.py  data_validator.py  error_handler.py  logger.py
src/visualization/: __init__.py  executive_dashboard.py
tests/: __init__.py
tests/integration/: test_enterprise_integration.py
tests/unit/: test_customer_segmentation.py  test_data_loader.py  test_performance_metrics.py
(+6 files in other folders)
